# template-docker

./: .dockerignore  .gitignore  .project  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: senzing.md
.github/: dependabot.yml  renovate.json
.github/linters/: .checkov.yaml  README.md  actionlint.yml
.github/workflows/: README.md  add-dependabot-request-to-project-t-ast.yaml  add-dependabot-request-to-project-t-comm.yaml  add-dependabot-request-to-project-t-g2-python.yaml  add-dependabot-request-to-project-t-gdev.yaml  add-issue-to-project-t-ast.yaml  add-issue-to-project-t-comm.yaml  add-issue-to-project-t-g2-python.yaml  add-issue-to-project-t-gdev.yaml  add-to-project-garage-dependabot.yaml  add-to-project-garage.yaml  add-to-project-t-ast.yaml  bearer.yaml  build-docker-container.yaml  dependabot-approve-and-merge.yaml  docker-build-container.yaml  docker-push-containers-to-dockerhub.yaml  docker-verify-refreshed-at-updated.yaml  identify-customer.yaml  lint-workflows.yaml  move-pr-to-done.yaml  pull-request-tests.yaml  verify-dockerfile-refreshed-at-updated.yaml
.github/workflows/examples/: add-to-project-1topic.yaml  add-to-project-2topic.yaml  add-to-project.yaml  (+4 more)
docs/: README.md  best-practices.md  development.md  errors.md  examples.md
makefiles/: darwin.mk  darwin_arm64.mk  darwin_x86_64.mk  linux.mk  linux_arm64.mk  linux_x86_64.mk  osdetect.mk  windows.mk  windows_arm64.mk  windows_x86_64.mk
rootfs/tmp/: example.txt
